clusters/lynka/kubernetes/apps/network/envoy-gateway/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-helm
  ingress:
    - fromEndpoints:
        - matchLabels: &proxy-labels
            app.kubernetes.io/name: envoy
            app.kubernetes.io/component: proxy
  egress:
    - toEndpoints:
        - matchLabels: *proxy-labels
      toPorts:
        - ports:
            - port: "18000"
              protocol: ANY
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
  ingress:
    - fromEndpoints:
        - matchLabels: &gateway-labels
            app.kubernetes.io/name: gateway-helm
  egress:
    - toEndpoints:
        - matchLabels: *gateway-labels
      toPorts:
        - ports:
            - port: "18000"
              protocol: ANY
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-envoy-proxy-http-https
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  - fromCIDRSet:
      - cidrGroupRef: group-lan
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "80"
        protocol: UDP
      - port: "443"
        protocol: TCP
      - port: "443"
        protocol: UDP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-proxy-http-https
spec:
  endpointSelector:
    matchLabels:
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
  ingress:
    - toPorts:
        - ports:
          - port: "80"
            protocol: TCP
          - port: "80"
            protocol: UDP
          - port: "443"
            protocol: TCP
          - port: "443"
            protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            ingress.samoth.eu/envoy-internal: allow
